--- a/Front-End/CatalogueWebApp/angular.json
+++ b/Front-End/CatalogueWebApp/angular.json
@@ -25,7 +25,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js"
+              
+            ]
           },
           "configurations": {
             "production": {
@@ -81,7 +84,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
