--- a/security-service/pom.xml
+++ b/security-service/pom.xml
@@ -21,9 +21,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache</artifactId>
-			<version>2.9.0</version>
+			<groupId>org.passay</groupId>
+			<artifactId>passay</artifactId>
+			<version>1.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
