--- a/security-service/src/main/resources/application.properties
+++ b/security-service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+## Data base Connection 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_users
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.cache.use_second_level_cache=true
-#spring.jpa.properties.hibernate.cache.use_query_cache=true
-#spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+
+##Global Transaction debug
+logging.level.org.springframework.transaction.interceptor=TRACE
+server.port= 8888
+
